fixed an issue where padding or margins causes accordion elements to stay visible even when hidden

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -116,6 +116,11 @@ label {
     height:max-content !important;
 }
 
+.hidden * {
+    padding:0px;
+    margin:0px;
+}
+
 a {
     text-decoration:none;
 }
